core/kubernetes/dev/openhim/console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: console
  name: console
spec:
  replicas: 2
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      annotations:
      labels:
        app: console
    spec:
      containers:
        - image: jembi/openhim-console:1.13
          name: openhim-console
          ports:
            - containerPort: 80
          volumeMounts:
            - name: console-config
              mountPath: /usr/share/nginx/html/config/default.json
              subPath: console-config.json
      volumes:
        - name: console-config
          configMap:
            name: console-config
      restartPolicy: Always
