core/kubernetes/dev/openhim/openhim-mongo-dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openhim-mongo-dev-service
  namespace: core-package
spec:
  type: 'NodePort'
  selector:
    component: openhim-mongo
  ports:
    - name: mongo-27017
      port: 27017
      targetPort: 27017
